# gbox

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  skills-lock.json
docs/: core-behavior-and-codex-integration-iterations.md  devpost-submission.html  evidence-routing.md
fixtures/: company-records.json
scripts/: check-repo.mjs
src/: App.tsx  NotchApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex.rs  commands.rs  control.rs  domain.rs  evidence.rs  gate.rs  lib.rs  main.rs  notch.rs  observation.rs  replay.rs  state.rs  store.rs  verifier.rs
src-tauri/src/codex/: extraction.rs  ingestion.rs  tests.rs  verification.rs
src-tauri/src/store/: observations.rs  rows.rs  schema.rs  tests.rs
src/components/: action-history.tsx  app-dialog.test.tsx  app-dialog.tsx  app-header.tsx  approval-dialog.tsx  approval-panel.tsx  claim-detail.tsx  claim-ledger.tsx  dashboard-overview.tsx  dashboard-screen.tsx  event-timeline.tsx  evidence-settings.tsx  gbox-orb.tsx  gbox-ui.test.tsx  live-activity.tsx  observation-notch.test.tsx  observation-notch.tsx  settings-screen.tsx  status-board.tsx  task-composer.tsx  theme-toggle.tsx
src/hooks/: use-gbox.ts  use-observation-notch.test.tsx  use-observation-notch.ts  use-observation-notifications.ts  use-theme.ts
src/lib/: correction-prompt.test.ts  correction-prompt.ts  gbox-api.ts  live-activity.test.ts  live-activity.ts  notch-presentation.test.ts  notch-presentation.ts  (+6 more)
tests/: codex-live.test.ts  hook-dispatcher.test.ts  mcp-server.test.ts
(+13 files in other folders)
